--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4497,6 +4497,19 @@
   timestamp = {2019.06.28},
 }
 
+@Article{Chuang2015,
+  author    = {Chuang, C. and Bo, X. and Yanghua, X. and Quan, S. and Wei, W.},
+  title     = {Extracting social network from transaction logs},
+  journal   = {Journal of Computer Research and Development},
+  year      = {2015},
+  volume    = {52},
+  number    = {11},
+  pages     = {2508-2516},
+  doi       = {10.7544/issn1000-1239.2015.20148134},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Article{Chui2003,
   author    = {Chui, H. and Rangarajan, A.},
   title     = {A new point matching algorithm for non-rigid registration},
@@ -5968,6 +5981,19 @@
   url       = {https://global.oup.com/academic/product/evolution-of-networks-9780198515906},
 }
 
+@Article{Douze2010,
+  author    = {Douze, M. and Jegou, H. and Schmid, C.},
+  title     = {An Image-Based Approach to Video Copy Detection With Spatio-Temporal Post-Filtering},
+  journal   = {IEEE Transactions on Multimedia},
+  year      = {2010},
+  volume    = {12},
+  number    = {4},
+  pages     = {257-266},
+  doi       = {10.1109/TMM.2010.2046265},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Article{Downham2005,
   author    = {Downham, C.},
   title     = {The Battle of Clontarf in Irish history and legend},
@@ -6989,6 +7015,19 @@
   url       = {https://www.aclweb.org/anthology/P13-1174},
 }
 
+@Article{Feng2015,
+  author    = {Feng, L. and Bhanu, B.},
+  title     = {Understanding dynamic social grouping behaviors of pedestrians},
+  journal   = {IEEE Journal of Selected Topics in Signal Processing},
+  year      = {2015},
+  volume    = {9},
+  number    = {2},
+  pages     = {317-329},
+  doi       = {10.1109/JSTSP.2014.2365765},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Article{Fenu2017,
   author    = {Fenu, C. and Higham, D. J.},
   title     = {Block Matrix Formulations for Evolving Networks},
@@ -7081,6 +7120,18 @@
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {http://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780198121800.001.0001/acprof-9780198121800},
+}
+
+@Article{Finegold2016,
+  author    = {Finegold, M. and Otis, J. and Shalizi, C. and Shore, D. and Wang, L. and Warren, C.},
+  title     = {Six degrees of Francis Bacon: A statistical method for reconstructing large historical social networks},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2016},
+  volume    = {10},
+  number    = {3},
+  doi       = {10.17613/M6B020},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @InProceedings{Finkel2005,
@@ -8858,6 +8909,19 @@
   timestamp = {2019.04.11},
 }
 
+@Article{Han2017,
+  author    = {Han, H. and Yao, C. and Fu, Y. and Yu, Y. and Zhang, Y. and Xu, S.},
+  title     = {Semantic fingerprintsbased author name disambiguation in Chinese documents},
+  journal   = {Scientometrics},
+  year      = {2017},
+  volume    = {111},
+  number    = {3},
+  pages     = {1879–1896},
+  doi       = {10.1007/s11192-017-2338-6},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Article{Hanjalic1999,
   author    = {Hanjalic, A. and Lagendijk, R. L. and Biemond, J.},
   title     = {Automated high-level movie segmentation for advanced video-retrieval systems},
@@ -8903,6 +8967,20 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://dl.acm.org/citation.cfm?id=1642463},
+}
+
+@Article{Harakawa2017,
+  author        = {Harakawa, R. and Ogawa, T. and Haseyama, M.},
+  title         = {Extracting hierarchical structure of web video groups based on sentiment-aware signed network analysis},
+  journal       = {IEEE Access},
+  year          = {2017},
+  volume        = {5},
+  pages         = {16963-16973},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/ACCESS.2017.2741098},
+  groups        = {Signed Networks CD, Classic Optimization CD},
+  owner         = {Vincent},
+  timestamp     = {2018.12.11},
 }
 
 @Book{Harary1969,
@@ -9109,6 +9187,19 @@
   owner     = {Vincent},
   timestamp = {2017.12.05},
   url       = {http://www.aclweb.org/anthology/P13-1129},
+}
+
+@Article{He2016,
+  author    = {He, X. and Chen, Y. and Li, D. and Hao, Y.},
+  title     = {A Construction for Social Network on the Basis of Project Cooperation},
+  journal   = {Journal of Computer Research and Development},
+  year      = {2016},
+  volume    = {53},
+  number    = {4},
+  pages     = {776-784},
+  doi       = {10.7544/issn1000-1239.2016.20151172},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @InProceedings{He2018i,
@@ -12475,6 +12566,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
+@Article{Li2017b,
+  author    = {Li, F. and Zhang, M. and Fu, G. and Ji, D.},
+  title     = {A neural joint model for entity and relation extraction from biomedical text},
+  journal   = {BMC Bioinformatics},
+  year      = {2017},
+  volume    = {18},
+  pages     = {198},
+  doi       = {10.1186/s12859-017-1609-9},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Article{Li2017p,
   author    = {Li, C. and Liu, X. and Wong, T.-T.},
   title     = {Deep extraction of manga structural lines},
@@ -12972,6 +13075,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@InProceedings{Lu2013a,
+  author    = {Lu, X. and Leung, C.-C. and Xie, L. and Ma, B. and Li, H.},
+  title     = {Broadcast news story segmentation using latent topics on data manifold},
+  booktitle = {IEEE International Conference on Acoustics, Speech and Signal Processing},
+  year      = {2013},
+  pages     = {8465-8469},
+  doi       = {10.1109/ICASSP.2013.6639317},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Article{Lu2014c,
   author    = {Lu, Z. and Zhu, Y. and Li, W. and Wu, W. and Cheng, X.},
   title     = {Influence-based community partition for social networks},
@@ -13119,6 +13233,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1098/rsbl.2004.0225},
   owner     = {Vincent},
   timestamp = {2010.10.04},
+}
+
+@InProceedings{Lv2016,
+  author    = {Lv, J. and Wu, B. and Yang, S. and Jia, B. and Qiu, P.},
+  title     = {Efficient large scale near-duplicate video detection base on spark},
+  booktitle = {IEEE International Conference on Big Data},
+  year      = {2016},
+  pages     = {957-962},
+  doi       = {10.1109/BigData.2016.7840693},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
+@Article{Lv2018,
+  author    = {Lv, J. and Wu, B. and Zhou, L. and Wang, H.},
+  title     = {StoryRoleNet: Social Network Construction of Role Relationship in Video},
+  journal   = {IEEE Access},
+  year      = {2018},
+  volume    = {6},
+  pages     = {25958-25969},
+  doi       = {10.1109/ACCESS.2018.2832087},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @Book{Lynch2007,
@@ -16536,6 +16673,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1944679},
 }
 
+@InProceedings{Peng2012,
+  author    = {Peng, C. and Gu, J. and Qian, L.},
+  title     = {Research on tree kernel-based personal relation extraction},
+  booktitle = {Natural Language Processing and Chinese Computing},
+  year      = {2012},
+  volume    = {333},
+  series    = {Communications in Computer and Information Science},
+  pages     = {225-236},
+  doi       = {10.1007/978-3-642-34456-5_21},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Book{Pennebaker2001,
   title     = {Linguistic Inquiry and Word Count},
   publisher = {Lawrence Erlbaum Associates},
@@ -18640,6 +18790,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://pdfs.semanticscholar.org/51e8/eb339b48ee13c6e4841deddaae0c35acd203.pdf},
 }
 
+@Article{Sapru2015,
+  author    = {Sapru, A. and Bourlard, H.},
+  title     = {Automatic recognition of emergent social roles in small group interactions},
+  journal   = {IEEE Transactions on Multimedia},
+  year      = {2015},
+  volume    = {17},
+  number    = {5},
+  pages     = {746-760},
+  doi       = {10.1109/TMM.2015.2408437},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Article{Sarkar2005,
   author    = {Sarkar, P. and Moore, A. W.},
   title     = {Dynamic social network analysis using latent space models},
@@ -19098,6 +19261,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/00223980.1954.9712925},
   owner     = {Vincent},
   timestamp = {2017.10.26},
+}
+
+@Article{Shen2017,
+  author    = {Shen, J. and Zhou, T. and Lai, C.-F. and Li, J. and Li, X.},
+  title     = {Hierarchical trust level evaluation for pervasive social networking},
+  journal   = {IEEE Access},
+  year      = {2017},
+  volume    = {5},
+  pages     = {1178-1187},
+  doi       = {10.1109/ACCESS.2017.2652486},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @InProceedings{Shervashidze2009,
@@ -20019,6 +20194,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@InProceedings{Sun2013,
+  author    = {Sun, Y. and Wang, X. and Tang, X.},
+  title     = {Deep convolutional network cascade for facial point detection},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2013},
+  pages     = {3476-3483},
+  doi       = {10.1109/CVPR.2013.446},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @InProceedings{Sun2013d,
   author    = {Sun, W. and Burie, J.-C. and Ogier, J.-M. and Kise, K.},
   title     = {Specific Comic Character Detection Using Local Feature Matching},
@@ -20028,6 +20214,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ICDAR.2013.62},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@InProceedings{Sun2014,
+  author    = {Sun, Y. and Wang, X. and Tang, X.},
+  title     = {Deep Learning Face Representation from Predicting 10,000 Classes},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2014},
+  pages     = {1891-1898},
+  doi       = {10.1109/CVPR.2014.244},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @Article{Sun2017,
@@ -20041,6 +20238,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s11042-017-4807-6},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@InProceedings{Sun2017a,
+  author    = {Sun, Q. and Schiele, B. and Fritz, M.},
+  title     = {A Domain Based Approach to Social Relation Recognition},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2017},
+  pages     = {435-444},
+  doi       = {10.1109/CVPR.2017.54},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @InCollection{Sutton2006,
@@ -20225,6 +20433,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://tango.bol.ucla.edu/publications/A99.pdf},
 }
 
+@Article{Tanisik2016,
+  author    = {Tanisik, G. and Zalluhoglu, C. and Ikizler-Cinbis, N.},
+  title     = {Facial descriptors for human interaction recognition in still images},
+  journal   = {Pattern Recognition Letters},
+  year      = {2016},
+  volume    = {73},
+  pages     = {44-51},
+  doi       = {10.1016/j.patrec.2016.01.002},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @InProceedings{Tapaswi2012,
   author    = {Tapaswi, M. and Bäuml, M. and Stiefelhagen, R.},
   title     = {``Knock! Knock! Who is it?'' probabilistic person identification in {TV}-series},
@@ -20256,6 +20476,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/CVPR.2015.7298792},
   owner     = {Vincent},
   timestamp = {2018.11.10},
+}
+
+@InProceedings{Tapu2016,
+  author    = {Tapu, R. and Mocanu, B. and Zaharia, T.},
+  title     = {TV news retrieval based on story segmentation and concept association},
+  booktitle = {12th International Conference on Signal-Image Technology \& Internet-Based Systems},
+  year      = {2016},
+  pages     = {327-334},
+  doi       = {10.1109/SITIS.2016.60},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @Article{Tardy1985,
@@ -20504,6 +20735,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://archive.org/details/shakespearesprob032517mbp/page/n8},
+}
+
+@Article{Tippaya2017,
+  author    = {Tippaya, S. and Sitjongsataporn, S. and Tan, T. and Khan, M. M. and Chamnongthai, K.},
+  title     = {Multi-modal visual features-based video shot boundary detection},
+  journal   = {IEEE Access},
+  year      = {2017},
+  volume    = {5},
+  pages     = {12563-12575},
+  doi       = {10.1109/ACCESS.2017.2717998},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @InProceedings{Titov2008,
@@ -21192,6 +21435,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-642-04208-9_34},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Vatrapu2016,
+  author    = {Vatrapu, R. and Mukkamala, R. R. and Hussain, A. and Flesch, B.},
+  title     = {Social set analysis: A set theoretical approach to big data analytics},
+  journal   = {IEEE Access},
+  year      = {2016},
+  volume    = {4},
+  pages     = {2542-2571},
+  doi       = {10.1109/ACCESS.2016.2559584},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @Article{Vazquez2002a,
@@ -22988,6 +23243,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://digital.lib.washington.edu/researchworks/handle/1773/23330},
+}
+
+@InProceedings{Zhang2015,
+  author    = {Zhang, Z. and Luo, P. and Loy, C.-C. and Tang, X.},
+  title     = {Learning social relation traits from face images},
+  booktitle = {IEEE International Conference on Computer Vision},
+  year      = {2015},
+  pages     = {3631-3639},
+  doi       = {10.1109/ICCV.2015.414},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @Article{Zhao2003,
