--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -10304,6 +10304,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.06},
 }
 
+@InProceedings{Ji2008,
+  author    = {Ji, R. and Sun, X. and Yao, H. and Xu, P. and Liu, T. and Liu, X.},
+  title     = {Attention-driven action retrieval with DTW-based 3d descriptor matching},
+  booktitle = {16th ACM international conference on Multimedia},
+  year      = {2008},
+  pages     = {619-622},
+  doi       = {10.1145/1459359.1459443},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Article{Ji2013,
   author    = {Ji, S. and Xu, W. and Yang, M. and Yu, K.},
   title     = {3D Convolutional Neural Networks for Human Action Recognition},
@@ -18294,6 +18305,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Article{Ross2008,
+  author    = {Ross, D. A. and Lim, J. and Lin, R.-S. and Yang, M.-H.},
+  title     = {Incremental learning for robust visual tracking},
+  journal   = {International Journal of Computer Vision},
+  year      = {2008},
+  volume    = {77},
+  number    = {1-3},
+  pages     = {125-141},
+  doi       = {10.1007/s11263-007-0075-7},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @Article{Roth1999,
   author    = {Roth, V.},
   title     = {Content-based retrieval from digital video},
@@ -20181,6 +20205,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.18},
   url       = {https://arxiv.org/abs/1805.11824},
+}
+
+@InProceedings{Sun2008,
+  author    = {Sun, X. and Ji, R. and Yao, H. and Xu, P. and Liu, T. and Liu, X.},
+  title     = {Place retrieval with graph-based place-view model},
+  booktitle = {1st ACM international conference on Multimedia information retrieval},
+  year      = {2008},
+  pages     = {268-275},
+  doi       = {10.1145/1460096.1460141},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
 }
 
 @InProceedings{Sun2011g,
@@ -22807,6 +22842,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@Article{Yang2004b,
+  author    = {Yang, J. and Zhang, D. and Frangi, A. F. and Yang, J.-Y.},
+  title     = {Two-dimensional PCA: a new approach to appearance-based face representation and recognition},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2004},
+  volume    = {26},
+  number    = {1},
+  pages     = {131-137},
+  doi       = {10.1109/TPAMI.2004.1261097},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @InProceedings{Yang2005,
   author    = {Yang, J. and Yan, R. and Hauptmann, A. G.},
   title     = {Multiple instance learning for labeling faces in broadcasting news video},
@@ -23051,11 +23099,34 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.03.19},
 }
 
+@InProceedings{Yuan2005,
+  author    = {Yuan, J. and Li, J. and Lin, F. and Zhang, B.},
+  title     = {A unified shot boundary detection framework based on graph partition model},
+  booktitle = {13th annual ACM international conference on Multimedia},
+  year      = {2005},
+  pages     = {539-542},
+  doi       = {10.1145/1101149.1101271},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
+@InProceedings{Yuan2009,
+  author    = {Yuan, K. and Ji, R. and Yao, H. and Sun, X. and Xu, P. and Liu, X.},
+  title     = {VisualCor system: search actor correlations in TV series},
+  booktitle = {1st International Conference on Internet Multimedia Computing and Service},
+  year      = {2009},
+  pages     = {213-218},
+  doi       = {10.1145/1734605.1734655},
+  owner     = {Vincent},
+  timestamp = {2019.07.03},
+}
+
 @InProceedings{Yuan2010,
   author    = {Yuan, K. and Yao, H. and Ji, R. and Sun, X.},
   title     = {Mining actor correlations with hierarchical concurrence parsing},
   booktitle = {IEEE International Conference on Acoustics, Speech and Signal Processing},
   year      = {2010},
+  pages     = {798-801},
   doi       = {10.1109/icassp.2010.5494953},
   owner     = {Vincent},
   timestamp = {2019.03.29},
