--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2864,7 +2864,7 @@
 @Article{Bost2018a,
   author    = {Bost, X. and Gueye, S. and Labatut, V. and Larson, M. and Linarès, G. and Malinas, D. and Roth, R.},
   title     = {Remembering Winter Was Coming: Character-oriented Video Summaries of {TV} Series},
-  journal   = {Submitted to Multimedia Tools and Applications},
+  journal   = {To appear in Multimedia Tools and Applications},
   year      = {2019},
   owner     = {Vincent},
   timestamp = {2018.06.11},
@@ -8362,6 +8362,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://dl.acm.org/citation.cfm?id=1870658.1870666},
+}
+
+@Article{Goyal2018,
+  author  = {Goyal, A. and Gupta, V. and Kumar, M.},
+  title   = {Recent Named Entity Recognition and Classification techniques: A systematic review},
+  journal = {Computer Science Review},
+  year    = {2018},
+  volume  = {29},
+  pages   = {21-43},
+  doi     = {10.1016/j.cosrev.2018.06.001},
 }
 
 @InCollection{Graesser1991,
@@ -17012,6 +17022,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2063576.2063724},
   owner     = {Vincent},
   timestamp = {2019.03.29},
+}
+
+@Book{Poesio2016,
+  title     = {Anaphora Resolution: Algorithms, Resources, and Applications},
+  publisher = {Springer},
+  year      = {2016},
+  author    = {Poesio, Massimo and Stuckardt, Roland and Versley, Yannick},
+  series    = {Theory and Applications of Natural Language Processing},
+  doi       = {10.1007/978-3-662-47909-4},
+  timestamp = {2019.07.04},
 }
 
 @InProceedings{Pohl2008,
