added missing references

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -23219,6 +23219,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.abc-clio.com/Praeger/product.aspx?pc=D6234C},
 }
 
+@InCollection{Wojnarowski2016,
+  author    = {Wojnarowski, J. and Zawiślak, S.},
+  title     = {Kazimierz Kuratowski- Biography and Genesis of the Theorem on Planar Graphs},
+  booktitle = {Graph-Based Modelling in Engineering},
+  publisher = {Springer},
+  year      = {2016},
+  volume    = {42},
+  series    = {Mechanisms and Machine Science},
+  pages     = {233-246},
+  doi       = {10.1007/978-3-319-39020-8_18},
+  owner     = {Vincent},
+  timestamp = {2019.08.19},
+}
+
 @Book{Woloch2003,
   title     = {The One vs. the Many: Minor Characters and the Space of the Protagonist in the Novel},
   publisher = {Princeton University Press},
@@ -23817,6 +23831,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.07.31},
 }
 
+@Article{Young2004,
+  author    = {Young, R. M. and Riedl, M. O. and Branly, M. and Jhala, A. and Martin, R. J. and Saretto, C. J.},
+  title     = {An architecture for integrating plan-based behavior generation with interactive game environments},
+  journal   = {Journal of Game Development},
+  year      = {2004},
+  volume    = {1},
+  number    = {1},
+  pages     = {3},
+  owner     = {Vincent},
+  timestamp = {2019.08.19},
+  url       = {https://www.cc.gatech.edu/~riedl/pubs/jogd.pdf},
+}
+
 @Electronic{Young2019,
   author       = {Young, R. and Sandall, B.},
   month        = {06},
@@ -23959,6 +23986,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Article{Zawislak2003,
+  author    = {Zawiślak, S. and Frej, G.},
+  title     = {An influence of parameters of the evolutionary algorithm applied for the graph k-partitioning problem},
+  journal   = {Studia Informatica},
+  year      = {2003},
+  volume    = {24},
+  number    = {4},
+  pages     = {165-187},
+  doi       = {10.21936/si2003_v24.n4.649},
+  owner     = {Vincent},
+  timestamp = {2019.08.19},
+}
+
 @InProceedings{Zawislak2008,
   author    = {Zawiślak, S. and Szypula, Ł. and Mysliwiec, M. and Jagosz, A.},
   title     = {Some application of graph transformations in modeling of mechanical systems},
@@ -23968,6 +24008,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {http://www.user.tu-berlin.de/o.runge/tfs/workshops/gtvmt08/Program/paper_6.pdf},
+}
+
+@InProceedings{Zawislak2009,
+  author    = {Zawiślak, S. and Matusiak, D.},
+  title     = {Multi-objective evolutionary design of trusses using graph-based method for stress calculation},
+  booktitle = {Transactions of the Universities of Košice},
+  year      = {2009},
+  volume    = {3},
+  number    = {181-184},
+  owner     = {Vincent},
+  timestamp = {2019.08.19},
+  url       = {http://www.zawislak.ath.eu/Achievements.html},
 }
 
 @PhdThesis{Zawislak2010,
