minor data update

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1429,7 +1429,7 @@
 
 @PhdThesis{Baldwin1947,
   author    = {Baldwin, T. W.},
-  title     = {Shakspere’s Five-Act Structure: Shakspere’s Early Plays on the Background of Renaissance Theories of Five-act Structure from 1470},
+  title     = {Shakspere's Five-Act Structure: Shakspere's Early Plays on the Background of Renaissance Theories of Five-act Structure from 1470},
   school    = {University of Illinois Press},
   year      = {1947},
   type      = {PhD Thesis},
@@ -1440,7 +1440,7 @@
 
 @PhdThesis{BaldwinLind2015,
   author    = {Baldwin Lind, P.},
-  title     = {Looking for Privacy in Shakespeare: Woman’s Place and Space in a Selection of Plays and Early Modern Texts},
+  title     = {Looking for Privacy in Shakespeare: Woman's Place and Space in a Selection of Plays and Early Modern Texts},
   school    = {University of Birmingham},
   year      = {2015},
   type      = {PhD Thesis},
@@ -3178,8 +3178,8 @@
 }
 
 @Book{Brean2012,
-  title     = {La Science-fiction en France : Théorie et histoire d’une littérature},
-  publisher = {Presses de l’Université Paris-Sorbonne},
+  title     = {La Science-fiction en France : Théorie et histoire d'une littérature},
+  publisher = {Presses de l'Université Paris-Sorbonne},
   year      = {2012},
   author    = {Bréan, S.},
   owner     = {Vincent},
@@ -3564,7 +3564,7 @@
 }
 
 @Book{Burnett2011,
-  title     = {Blind Ossian’s Fingal: Fragments and Controversy},
+  title     = {Blind Ossian's Fingal: Fragments and Controversy},
   publisher = {Luath Press},
   year      = {2011},
   author    = {Burnett, A. and Anderson, L.},
@@ -4004,7 +4004,7 @@
 
 @Article{Casey2010,
   author    = {Casey, D.},
-  title     = {Historical and literary representations of Brian Boru’s burial in Armagh, 1014AD},
+  title     = {Historical and literary representations of Brian Boru's burial in Armagh, 1014AD},
   journal   = {North Munster Antiquarian Journal},
   year      = {2010},
   volume    = {50},
@@ -6862,7 +6862,7 @@
 
 @InCollection{Erne2013,
   author    = {Erne, L.},
-  title     = {The Bibliographic and Baratextual Makeup of Shakespeare’s Quarto Playbooks},
+  title     = {The Bibliographic and Baratextual Makeup of Shakespeare's Quarto Playbooks},
   booktitle = {Shakespeare and the Book Trade},
   publisher = {Cambridge University Press},
   year      = {2013},
@@ -7433,7 +7433,7 @@
 
 @Article{Fischer2017,
   author    = {Fischer, F. and Dazord, G. and Göbel, M. and Kittel, C. and Trilcke, P.},
-  title     = {Le drame comme réseau de relations : Une application de l’analyse automatisée pour l’histoire littéraire du théâtre},
+  title     = {Le drame comme réseau de relations : Une application de l'analyse automatisée pour l'histoire littéraire du théâtre},
   journal   = {Revue d'Historiographie du Théâtre},
   year      = {2017},
   volume    = {4},
@@ -8917,7 +8917,7 @@
 
 @Article{Guerin2017,
   author    = {Guérin, C. and Rigaud, C. and Bertet, K. and Revel, A.},
-  title     = {An ontology-based framework for the automated analysis and interpretation of comic books’ images},
+  title     = {An ontology-based framework for the automated analysis and interpretation of comic books' images},
   journal   = {Information Sciences},
   year      = {2017},
   volume    = {378},
@@ -10228,7 +10228,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InCollection{Hunter1976,
   author    = {Hunter, G. K.},
-  title     = {Were there Act-Pauses on Shakespeare’s Stage?},
+  title     = {Were there Act-Pauses on Shakespeare's Stage?},
   booktitle = {English Renaissance Drama: Essays in Honor of Madeleine Doran \& Mark Eccles},
   publisher = {Southern Illinois University Press},
   year      = {1976},
@@ -11507,7 +11507,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Book{Koch2009,
-  title     = {The Modern Library Writer’s Workshop: A Guide to the Craft of Fiction},
+  title     = {The Modern Library Writer's Workshop: A Guide to the Craft of Fiction},
   publisher = {Modern Library},
   year      = {2009},
   author    = {Koch, S.},
@@ -12143,7 +12143,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Book{Langlet2006,
-  title     = {La science-fiction. Lecture et poétique d’un genre littéraire},
+  title     = {La science-fiction. Lecture et poétique d'un genre littéraire},
   publisher = {Armand Colin},
   year      = {2006},
   author    = {Langlet, I.},
@@ -14135,7 +14135,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @PhdThesis{Marshall2007,
   author    = {Marshall, L. M.},
-  title     = {``I’ll Be There For You'' If You Are Just Like Me: An Analysis Of Hegemonic Social Structures in ``Friends''},
+  title     = {``I'll Be There For You'' If You Are Just Like Me: An Analysis Of Hegemonic Social Structures in ``Friends''},
   school    = {Bowling Green State University},
   year      = {2007},
   type      = {PhD Thesis},
@@ -15576,7 +15576,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{Myers1989,
   author    = {Myers, M.},
   title     = {Quixotes, Orphans, and Subjectivity: Maria Edgeworth's Georgian Heroinism and the (En)Gendering of Young Adult Fiction},
-  journal   = {The Lion and the Unicorn: A Critical Journal of Children’s Literature},
+  journal   = {The Lion and the Unicorn: A Critical Journal of Children's Literature},
   year      = {1989},
   volume    = {13},
   number    = {1},
@@ -18565,7 +18565,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Rigaud2016b,
   author    = {Rigaud, C. and Burie, J.-C. and Ogier, J.-M.},
   title     = {Extraction des bulles de bandes dessinées},
-  booktitle = {Colloque International Francophone sur l’Écrit et le Document},
+  booktitle = {Colloque International Francophone sur l'Écrit et le Document},
   year      = {2016},
   pages     = {201-216},
   owner     = {Vincent},
@@ -23530,7 +23530,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @TechReport{Yanagawa2007,
   author      = {Yanagawa, A. and Chang, S.-F. and Kennedy, L. and Hsu, W.},
-  title       = {Columbia university’s baseline detectors for 374 lscom semantic visual concepts},
+  title       = {Columbia university's baseline detectors for 374 lscom semantic visual concepts},
   institution = {Columbia university},
   year        = {2007},
   type        = {Technical Report},
@@ -24046,7 +24046,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InProceedings{Zawislak2018,
-  author    = {Zawiślak, S. and Kopec, J.},
+  author    = {Zawiślak, S. and Kopeć, J.},
   title     = {Theatre, love and graphs},
   booktitle = {17th Conference on Applied Mathematics},
   year      = {2018},
@@ -24057,8 +24057,8 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Zawislak2019,
-  author        = {Zawislak, S. and Kopeć, J.},
-  title         = {A Graph-Based Analysis of Anton Chekhov’s Uncle Vanya},
+  author        = {Zawiślak, S. and Kopeć, J.},
+  title         = {A Graph-Based Analysis of Anton Chekhov's Uncle Vanya},
   journal       = {Journal of Humanistic Mathematics},
   year          = {2019},
   volume        = {9},
