--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -382,6 +382,17 @@
   timestamp     = {2017.05.03},
 }
 
+@InProceedings{Ahmed2015,
+  author    = {Ahmed, M. and Jahangir, M. and Afzal, H. and Majeed, A. and Siddiqi, I.},
+  title     = {Using Crowd-Source Based Features from Social Media and Conventional Features to Predict the Movies Popularity},
+  booktitle = {IEEE International Conference on Smart City / SocialCom / SustainCom},
+  year      = {2015},
+  pages     = {273-278},
+  doi       = {10.1109/smartcity.2015.83},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+}
+
 @InProceedings{Ahn2007,
   author    = {Ahn, Y. Y. and Han, S. and Kwak, H. and Moon, S. and Jeong, H.},
   title     = {Analysis of topological characteristics of huge online social networking services},
@@ -675,6 +686,18 @@
   url          = {https://thelittledataset.com/2015/01/20/the-one-with-all-the-quantifiable-friendships/},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@Article{Alexopoulos2010,
+  author    = {Alexopoulos, E.},
+  title     = {Introduction to Multivariate Regression Analysis},
+  journal   = {Hippokratia},
+  year      = {2010},
+  volume    = {14},
+  pages     = {23-28},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+  url       = {https://hippokratia.gr/images/PDF/14Sup1/734.pdf},
 }
 
 @Article{Algee-Hewitt2017,
@@ -2477,6 +2500,19 @@
   timestamp = {2019.04.12},
 }
 
+@Article{Biau2016,
+  author    = {Biau, G. and Scornet, E.},
+  title     = {A random forest guided tour},
+  journal   = {TEST},
+  year      = {2016},
+  volume    = {25},
+  number    = {2},
+  pages     = {197-227},
+  doi       = {10.1007/s11749-016-0481-7},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+}
+
 @Book{Biber1988,
   title     = {Variation Across Speech and Writing},
   publisher = {Cambridge University Press},
@@ -3585,6 +3621,19 @@
   doi       = {10.1023/a:1010933404324},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Article{Breiman2001a,
+  author    = {Breiman, L.},
+  title     = {Random Forests},
+  journal   = {Machine Learning},
+  year      = {2001},
+  volume    = {45},
+  number    = {1},
+  pages     = {5-32},
+  doi       = {10.1023/a:1010933404324},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
 }
 
 @Article{Brezovnik2015,
@@ -8933,6 +8982,19 @@
   timestamp = {2019.04.07},
 }
 
+@Article{Gaikar2015,
+  author    = {Gaikar, D. D. and Marakarkandy, B. and Dasgupta, C.},
+  title     = {Using Twitter data to predict the performance of Bollywood movies},
+  journal   = {Industrial Management \& Data Systems},
+  year      = {2015},
+  volume    = {115},
+  number    = {9},
+  pages     = {1604-1621},
+  doi       = {10.1108/imds-04-2015-0145},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+}
+
 @InCollection{Galam2011,
   author    = {Galam, S.},
   title     = {Sociophysics: The Origins},
@@ -9483,6 +9545,20 @@
   timestamp = {2019.03.23},
 }
 
+@InProceedings{Golbeck2006,
+  author    = {Golbeck, J.},
+  title     = {Generating Predictive Movie Recommendations from Trust in Social Networks},
+  booktitle = {International Conference on Trust Management},
+  year      = {2006},
+  volume    = {3986},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {93-104},
+  publisher = {Springer},
+  doi       = {10.1007/11755593_8},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+}
+
 @InCollection{Gold2002,
   author    = {Gold, T. and Guthrie, D. and Wank, D.},
   title     = {An Introduction to the Study of Guanxi},
@@ -9872,6 +9948,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://dl.acm.org/citation.cfm?id=2976456.2976521},
+}
+
+@Article{Greve2003,
+  author    = {Greve, A. and Salaff, J. W.},
+  title     = {Social Networks and Entrepreneurship},
+  journal   = {Entrepreneurship Theory and Practice},
+  year      = {2003},
+  volume    = {28},
+  number    = {1},
+  pages     = {1-22},
+  doi       = {10.1111/1540-8520.00029},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
 }
 
 @Article{Grimm2005,
@@ -10801,6 +10890,19 @@
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {https://www.logos.com/product/49615/the-book-of-acts-in-the-setting-of-hellenistic-history},
+}
+
+@Article{Henderson1989,
+  author    = {Henderson, D. A. and Denison, D. R.},
+  title     = {Stepwise Regression in Social and Psychological Research},
+  journal   = {Psychological Reports},
+  year      = {1989},
+  volume    = {64},
+  number    = {1},
+  pages     = {251-257},
+  doi       = {10.2466/pr0.1989.64.1.251},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
 }
 
 @Book{Hennig2012,
@@ -12781,6 +12883,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Article{Kim2016,
+  author    = {Kim, S. and Ahn, H.},
+  title     = {Application of Random Forests to Corporate Credit Rating Prediction},
+  journal   = {Journal of Business and Economics},
+  year      = {2016},
+  volume    = {32},
+  pages     = {187-221},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+  url       = {https://www.researchgate.net/publication/312153622_Application_of_Random_Forests_to_Corporate_Credit_Rating_Prediction},
+}
+
 @InProceedings{Kim2017,
   author    = {Kim, K.-M. and Heo, M.-O. and Choi, S.-H. and Zhang, B.-T.},
   title     = {DeepStory: video story QA by deep embedded memory networks},
@@ -14294,6 +14408,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url           = {https://www.researchgate.net/publication/334131905_Learning_Distributed_Representations_of_Character_Networks_for_Computational_Narrative_Analytics},
 }
 
+@Article{Lee2020,
+  author    = {Lee, O-J. and Jung, J. J.},
+  title     = {Story embedding: Learning distributed representations of stories based on character networks},
+  journal   = {Artificial Intelligence},
+  year      = {2020},
+  volume    = {281},
+  pages     = {103235},
+  doi       = {10.1016/j.artint.2020.103235},
+  owner     = {Vincent},
+  timestamp = {2020.01.18},
+}
+
 @InCollection{Leerssen2019,
   author    = {Leerssen, J.},
   title     = {National drama and national theatre},
@@ -15221,6 +15347,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1707.05213},
 }
 
+@InCollection{Liu2017o,
+  author    = {Liu, W. and Sidhu, A. and Beacom, A. M. and Valente, T. W.},
+  title     = {Social Network Theory},
+  booktitle = {The International Encyclopedia of Media Effects},
+  year      = {2017},
+  doi       = {10.1002/9781118783764.wbieme0092},
+  groups    = {Social Networks},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+}
+
 @InProceedings{Lombardo2015,
   author    = {Lombardo, V. and Pizzo, A.},
   title     = {The visualisation of drama hierarchies},
@@ -15837,6 +15974,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1405.0603},
 }
 
+@Article{Makhoul1975,
+  author    = {Makhoul, J.},
+  title     = {Linear prediction: A tutorial review},
+  journal   = {Proceedings of the IEEE},
+  year      = {1975},
+  volume    = {63},
+  number    = {4},
+  pages     = {561-580},
+  doi       = {10.1109/proc.1975.9792},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+}
+
 @Article{Makinen2005,
   author    = {Mäkinen, E. and Siirtola, H.},
   title     = {The Barycenter Heuristic and the Reorderable Matrix},
@@ -16127,7 +16277,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Markovic2018,
-  author    = {Markovič, R. and Gosak, M. and Perc, M. and Marhl, M. and Grubelnik, V.},
+  author    = {Markovic, R. and Gosak, M. and Perc, M. and Marhl, M. and Grubelnik, V.},
   title     = {Applying network theory to fables: complexity in Slovene belles-lettres for different age groups},
   journal   = {Journal of Complex Networks},
   year      = {2018},
@@ -17612,6 +17762,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.10.26},
   url       = {https://arxiv.org/abs/1910.09368},
+}
+
+@Book{Mrode2014,
+  title     = {Linear models for the prediction of animal breeding values},
+  publisher = {Cabi},
+  year      = {2014},
+  author    = {Mrode, R. A.},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+  url       = {https://www.cabi.org/bookshop/book/9781780643915/},
 }
 
 @Article{Mryglod2015,
@@ -19106,6 +19266,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/IJCNN.2016.7727719},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Article{Pan2019b,
+  author    = {Pan, Y. and Niu, Z. and Wu, J. and Zhang, J.},
+  title     = {InSocialNet: Interactive visual analytics for role-event videos},
+  journal   = {Computational Visual Media},
+  year      = {2019},
+  volume    = {5},
+  number    = {4},
+  pages     = {375-390},
+  doi       = {10.1007/s41095-019-0157-9},
+  owner     = {Vincent},
+  timestamp = {2020.01.25},
 }
 
 @InProceedings{Pang2002,
@@ -22828,6 +23001,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Singh2012,
+  author    = {Singh, K. P. and Gupta, S. and Kumar, A. and Shukla, S. P.},
+  title     = {Linear and nonlinear modeling approaches for urban air quality prediction},
+  journal   = {Science of The Total Environment},
+  year      = {2012},
+  volume    = {426},
+  pages     = {244-255},
+  doi       = {10.1016/j.scitotenv.2012.03.076},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+}
+
 @InProceedings{Sivic2005,
   author    = {Sivic, J. and Everingham, M. and Zisserman, A.},
   title     = {Person Spotting: Video Shot Retrieval for Face Sets},
@@ -23587,6 +23772,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-642-33564-8_76},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Article{Stone1974,
+  author    = {Stone, M.},
+  title     = {Cross-Validatory Choice and Assessment of Statistical Predictions},
+  journal   = {Journal of the Royal Statistical Society. Series B},
+  year      = {1974},
+  volume    = {36},
+  number    = {2},
+  pages     = {111-147},
+  doi       = {10.1111/j.2517-6161.1974.tb00994.x},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
 }
 
 @InProceedings{Stone2008,
@@ -27316,6 +27514,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.30},
 }
 
+@InProceedings{Zeng2019b,
+  author    = {Zeng, Y.},
+  title     = {Prediction of Film Score: Based on Character Relations},
+  booktitle = {International Conference on Humanities, Cultures, Arts and Design},
+  year      = {2019},
+  pages     = {26-34},
+  doi       = {10.25236/ICHCAD.2019.006},
+  owner     = {Vincent},
+  timestamp = {2020.01.24},
+}
+
 @InProceedings{Zhai2005,
   author    = {Zhai, Y. and Shah, M.},
   title     = {Automatic Segmentation of Home Videos},
@@ -27704,6 +27913,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.05},
   url       = {https://psycnet.apa.org/record/1950-00412-000},
+}
+
+@Article{Zou2015,
+  author    = {Zou, Z. B. and Peng, H. and Luo, L. K.},
+  title     = {The Application of Random Forest in Finance},
+  journal   = {Applied Mechanics and Materials},
+  year      = {2015},
+  volume    = {740},
+  pages     = {947-951},
+  doi       = {10.4028/www.scientific.net/amm.740.947},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
 }
 
 @Article{Zupan2015,
